--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -234,7 +234,9 @@
 <script type="text/ng-template" id="enlargeMatchesPhoto.html">
     <div class="modal-header">
         <h4 class="modal-title" id="enlarge" style="color: #4cbcac;font-weight: bold">
-            Profile Photos</h4>
+            Profile Photos
+        <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i class="fa fa-times"></i></button>
+        </h4>
     </div>
     <div class="modal-body" id="modal-body" style="text-align: center">
         <div class="row">
@@ -248,8 +250,5 @@
             </div>
         </div>
     </div>
-    <div class="modal-footer">
-        <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
-        <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
-    </div>
+
 </script>
