--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -84,7 +84,7 @@
 					<div class="col-md-9">
 						<div class="row">
 
-							<div class="col-md-5"><label class="message-name-text"><a ng-click="viewProfile(item.id_people)">{{item.user.name}}</a></label> &nbsp;<label
+							<div class="col-md-5"><label class="message-name-text"><a ng-click="viewProfile(item.user.id_people)">{{item.user.name}}</a></label> &nbsp;<label
 									class="style-cls">({{item.user.id_people}})</label></div>
 							<div ng-if="item.user.isOnline = 'online'" class="col-md-4"><i class="fa fa-circle " style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label>
 							</div>
