--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -83,7 +83,7 @@
                     <div class="col-md-9">
                         <div class="row">
 
-                            <div class="col-md-5"><label class="message-name-text"><a ng-click="viewProfile(item.id_people)">{{item.user.name}}</a></label>
+                            <div class="col-md-5"><label class="message-name-text"><a ng-click="viewProfile(item.user.id_people)">{{item.user.name}}</a></label>
                                 &nbsp;<label
                                         class="style-cls">({{item.user.id_people}})</label></div>
                             <div ng-if="item.user.isOnline = 'online'" class="col-md-4"><i class="fa fa-circle "
