--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -72,7 +72,8 @@
                                              ng-if="view.images.length == 0 && view.gender == 'female'"
                                              ng-src="/assets/defaultImages/female_card.jpg"/>
                                         <div ng-if="view.images.length == 0" >
-                                            <a ng-if="!photo_reqReq" ng-click="requests('photo_request','basicRequest')">Photo Request</a><span style="color:gainsboro;" ng-if="photo_reqReq">Photo already Requested</span>
+                                            <button style="height: 40px;width:230px;background-color: #3d84cc;color: white;font-size: 16px;font-weight: bold" ng-if="!photo_reqReq" ng-click="requests('photo_request','basicRequest')">Photo Request&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/icons/next.png" >                               </a>
+                                            </button><span style="color:gainsboro;" ng-if="photo_reqReq">Photo already Requested</span>
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-6">
