--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -178,8 +178,8 @@
                                         <span>Connect her with ?</span>
 
                                         <span>
-                                        <button class="btn red" ng-click="sendInterest()">YES</button>
-                                        <button class="btn " ng-click="skipInterestAction()">SKIP</button>
+                                        <button class="btn red" style="border-radius: 5px!important;" ng-click="sendInterest()">YES</button>
+                                        <button class="btn " style="border-radius: 5px!important;border-color: silver" ng-click="skipInterestAction()">SKIP</button>
                                         </span>
                                     </div>
                                 </div>
@@ -188,8 +188,8 @@
                                         <span>Are you sure you want to block {{view.name}}?</span>
 
                                         <span>
-                                        <button class="btn red" ng-click="blockPartner()">YES</button>
-                                        <button class="btn " ng-click="skipAction()">SKIP</button>
+                                        <button class="btn red" style="border-radius: 5px!important;" ng-click="blockPartner()">YES</button>
+                                        <button class="btn " style="border-radius: 5px!important;border-color: silver" ng-click="skipAction()">SKIP</button>
                                         </span>
                                     </div>
                                 </div>
