--- a/src/app/main/view-profile/viewProfile.css
+++ b/src/app/main/view-profile/viewProfile.css
@@ -44,8 +44,8 @@ color: #363636;
 font-size: 16px}
 
 .vp-sub-action{
-    padding: 10px;
-    background-color: #e4e4e4;
+    padding: 25px;
+    background-color: #f4f5dc;
     font-size: 18px;
     text-align: center;
     font-weight: 600;
