--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -101,7 +101,8 @@
                                             <div class="row">
                                                 <div class="col-md-12" style="height: 50px;width:100%;line-height:50px;
                       font-size: 20px;font-weight: bold;color: #0086B3"><span
-                                                        ng-click="backtomain()"> {{groupName}} ({{imageLength}})</span></div>
+                                                        ng-click="backtomain()">         <img src="/assets/icons/arrow-left.png" >                               </button>
+                                                     {{groupName}} ({{imageLength}})</span></div>
 
                                             </div>
 
