--- a/src/app/navigation/view-profile/viewProfileNav.html
+++ b/src/app/navigation/view-profile/viewProfileNav.html
@@ -1,7 +1,7 @@
 <div class="page-sidebar-wrapper section-background">
     <div class="page-sidebar navbar-collapse collapse side-bar-right">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" ng-if="similarProfiles.matches.length > 0">
                 <ul class="page-sidebar-menu menu-panel   " data-keep-expanded="false"
                     data-auto-scroll="true" data-slide-speed="200">
 
