--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -100,8 +100,8 @@
                                         <div>
                                             <div class="row">
                                                 <div class="col-md-12" style="height: 50px;width:100%;line-height:50px;
-                      font-size: 20px;font-weight: bold;color: #0086B3"><span
-                                                        ng-click="backtomain()">         <img src="/assets/icons/arrow-left.png" >                               </button>
+                      font-size: 20px;font-weight: bold;color: #0086B3;text-transform: capitalize"><span
+                                                        ng-click="backtomain()">         <img src="/assets/icons/back.png" >                               </button>
                                                      {{groupName}} ({{imageLength}})</span></div>
 
                                             </div>
