--- a/src/app/main/payment/payment.html
+++ b/src/app/main/payment/payment.html
@@ -8,7 +8,9 @@
             </div>
             <div ng-if="!paymentCompletion">
                 <div class="row">
-                    <div class="portlet light " style="padding-top: 0px" ng-if="!proceedPayment">
+                <div class="col-md-12">
+                    <!--ng-if="!proceedPayment"-->
+                    <div class="portlet light " style="padding-top: 0px" >
                         <div class=" row vp-main-action feature-header">
                             <div class="col-md-2 vp-main-link2 "
                                  ng-class="{'active-link': viewType == 'classic'}"
@@ -43,9 +45,9 @@
                                                                                 Classic
                                                                             </button>
                                                                         </div>
-                                                                        <!--<div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">-->
-                                                                        <!--<span class="old-price">Rs {{payment.classic3Months.price}}</span>-->
-                                                                        <!--</div>-->
+                                                                        <div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">
+                                                                        <span class="old-price" ng-class="{'price-color': selectPackageDetails == 'classic3','price-color-light': selectPackageDetails != 'classic3'}" style="font-size: 18px!important;">Rs 2500</span>
+                                                                        </div>
                                                                         <div class="col-md-12 col-sm-12 col-xs-12  margin-top-10">
                                                                             <span class="new-price"
                                                                                   ng-class="{'price-color': selectPackageDetails == 'classic3','price-color-light': selectPackageDetails != 'classic3'}">Rs {{payment.classic3Months.price}}</span>
@@ -65,9 +67,9 @@
                                                                                 Classic Advantage
                                                                             </button>
                                                                         </div>
-                                                                        <!--<div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">-->
-                                                                        <!--<span class="old-price">Rs {{payment.classicAdv.actual}}</span>-->
-                                                                        <!--</div>-->
+                                                                        <div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">
+                                                                        <span class="old-price" ng-class="{'price-color': selectPackageDetails == 'classic3Adv','price-color-light': selectPackageDetails != 'classic3Adv'}" style="font-size: 18px!important;">Rs 6000</span>
+                                                                        </div>
                                                                         <div class="col-md-12 col-sm-12 col-xs-12  margin-top-10">
                                                                             <span class="new-price"
                                                                                   ng-class="{'price-color': selectPackageDetails == 'classic3Adv','price-color-light': selectPackageDetails != 'classic3Adv'}">Rs {{payment.classicAdv3Months.price}}</span>
@@ -119,6 +121,9 @@
                                                                                 Classic
                                                                             </button>
                                                                         </div>
+                                                                        <div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">
+                                                                            <span class="old-price" ng-class="{'price-color': selectPackageDetails == 'classic6','price-color-light': selectPackageDetails != 'classic6'}" style="font-size: 18px!important">Rs 5500</span>
+                                                                        </div>
                                                                         <div class="col-md-12 col-sm-12 col-xs-12  margin-top-10">
                                                                             <span class="new-price"
                                                                                   ng-class="{'price-color': selectPackageDetails == 'classic6','price-color-light': selectPackageDetails != 'classic6'}">Rs {{payment.classic6Months.price}}</span>
@@ -138,9 +143,9 @@
                                                                                 Classic Advantage
                                                                             </button>
                                                                         </div>
-                                                                        <!--<div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">-->
-                                                                        <!--<span class="old-price">Rs {{payment.classicAdv6Months.actual}}</span>-->
-                                                                        <!--</div>-->
+                                                                        <div class="col-md-12 col-sm-12 col-xs-12  margin-top-15">
+                                                                        <span class="old-price" ng-class="{'price-color': selectPackageDetails == 'classic6Adv','price-color-light': selectPackageDetails != 'classic6Adv'}" style="font-size: 18px!important">Rs 7500</span>
+                                                                        </div>
                                                                         <div class="col-md-12 col-sm-12 col-xs-12  margin-top-10">
                                                                             <span class="new-price"
                                                                                   ng-class="{'price-color': selectPackageDetails == 'classic6Adv','price-color-light': selectPackageDetails != 'classic6Adv'}">Rs {{payment.classicAdv6Months.price}}</span>
@@ -383,6 +388,7 @@
 
                     </div>
                 </div>
+                </div>
 
 
             </div>
@@ -425,8 +431,8 @@
 
 
             </div>
-
-            <div ng-if="proceedPayment" class="row">
+            <!--ng-if="proceedPayment"-->
+            <div  class="row">
 
                 <div class="col-md-12 ">
                     <div class="row">
