--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -21,7 +21,7 @@
                 <div class="form-group text-dis" >
                     <label class=" col-md-4 control-label  reg-label">Profile for<span style="color: red">*</span></label>
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <select class="form-control input-rounded" ng-model="reg.profile_for" ng-change="selectProfileFor()">
                             <option value="" ng-selected="true" selected="selected">Select</option>
                             <option value="myself">Myself</option>
@@ -42,7 +42,7 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 control-label reg-label ">Name<span style="color: red">*</span></label>
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     <span ng-if="showName">
                         <div class="user-error-msg-arrow" ></div>
@@ -54,7 +54,7 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 control-label reg-label">Gender<span style="color: red">*</span></label>
 
-                    <div class="col-md-6">
+                    <div class="col-md-8">
 
                                     <label class="checkbox-inline" class="custon-text" style="padding-left: 0px;">
                                         <input type="radio" icheckbox_flat-red class="icheck " ng-model="reg.gender"
@@ -87,18 +87,136 @@
                    <!-- <div class="col-md-8">
                         <input type="date" required class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
                     </div>-->
-                    <div class="col-md-6 text-box-width">
-                        <p class="input-group" style="margin-bottom: 5px">
-                            <input type="text" readonly='readonly' class="form-control" uib-datepicker-popup="{{format}}" uib-datepicker-popup ng-model="reg.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
-          </span>
-                        </p>
-                        <span ng-if="showDOB">
-                        <div class="user-error-msg-arrow" style="bottom:13px!important;"></div>
-                        <div class="user-error-msg" style="bottom:5px!important;">{{dobMsg}}</div>
-                    </span>
+                    <div class="col-md-8 ">
+                    <div class="row">
+                    <div class="col-md-3 col-xs-3">
+                        <!--<p class="input-group" style="margin-bottom: 5px">-->
+                            <select class="form-control" ng-model="selectDob.day">
+                                <option value="">DD</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                                <option value="31">31</option>
+                            </select>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
 
+                        <select class="form-control col-md-4" ng-model="selectDob.month">
+                            <option value="">MM</option>
+                            <option value="1">JAN</option>
+                            <option value="2">FEB</option>
+                            <option value="3">MAR</option>
+                            <option value="4">APR</option>
+                            <option value="5">MAY</option>
+                            <option value="6">JUN</option>
+                            <option value="7">JUL</option>
+                            <option value="8">AUG</option>
+                            <option value="9">SEP</option>
+                            <option value="10">OCT</option>
+                            <option value="11">NOV</option>
+                            <option value="12">DEC</option>
+                        </select>
+
+                            </div>
+                        <div class="col-md-5 col-xs-5">
+
+                        <select class="form-control" ng-model="selectDob.year">
+                            <option value="">YEAR</option>
+                            <option value="1970">1970</option>
+                            <option value="1971">1971</option>
+                            <option value="1972">1972</option>
+                            <option value="1973">1973</option>
+                            <option value="1974">1974</option>
+                            <option value="1975">1975</option>
+                            <option value="1976">1976</option>
+                            <option value="1977">1977</option>
+                            <option value="1978">1978</option>
+                            <option value="1979">1979</option>
+                            <option value="1980">1980</option>
+                            <option value="1981">1981</option>
+                            <option value="1982">1982</option>
+                            <option value="1983">1983</option>
+                            <option value="1984">1984</option>
+                            <option value="1985">1985</option>
+                            <option value="1986">1986</option>
+                            <option value="1987">1987</option>
+                            <option value="1988">1988</option>
+                            <option value="1989">1989</option>
+                            <option value="1990">1990</option>
+                            <option value="1991">1991</option>
+                            <option value="1992">1992</option>
+                            <option value="1993">1993</option>
+                            <option value="1994">1994</option>
+                            <option value="1995">1995</option>
+                            <option value="1996">1996</option>
+                            <option value="1997">1997</option>
+                            <option value="1998">1998</option>
+                            <option value="1999">1999</option>
+                            <option value="2000">2000</option>
+                            <option value="2001">2001</option>
+                            <option value="2002">2002</option>
+                            <option value="2003">2003</option>
+                            <option value="2004">2004</option>
+                            <option value="2005">2005</option>
+                            <option value="2006">2006</option>
+                            <option value="2007">2007</option>
+                            <option value="2008">2008</option>
+                            <option value="2009">2009</option>
+                            <option value="2010">2010</option>
+                            <option value="2011">2011</option>
+                            <option value="2012">2012</option>
+                            <option value="2013">2013</option>
+                            <option value="2014">2014</option>
+                            <option value="2015">2015</option>
+                            <option value="2016">2016</option>
+                            <option value="2017">2017</option>
+                            <option value="2018">2018</option>
+                            <option value="2019">2019</option>
+
+                        </select>
+                             <span ng-if="showDOB">
+                            <div class="user-error-msg-arrow" style="bottom:13px!important;"></div>
+                            <div class="user-error-msg" style="bottom:5px!important;">{{dobMsg}}</div>
+                            </span>
+                            </div>
+                            <!--<input type="text" readonly='readonly' class="form-control" uib-datepicker-popup="{{format}}" uib-datepicker-popup ng-model="reg.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />-->
+          <!--<span class="input-group-btn">-->
+            <!--<button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>-->
+          <!--</span>-->
+                        <!--</p>-->
+                        <!--<span ng-if="showDOB">-->
+                        <!--<div class="user-error-msg-arrow" style="bottom:13px!important;"></div>-->
+                        <!--<div class="user-error-msg" style="bottom:5px!important;">{{dobMsg}}</div>-->
+                    <!--</span>-->
+
+                    </div>
                     </div>
 
                 </div>
@@ -106,7 +224,7 @@
                     <label class="col-md-4 control-label reg-label ">Mother Tongue<span style="color: red">*</span></label>
 
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <select class="form-control input-rounded "
                                 ng-model="reg.mothertongue" required>
                             <option  value="">Select</option>
@@ -122,7 +240,7 @@
                     <label class="col-md-4 control-label reg-label">Religion<span style="color: red">*</span></label>
 
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <select class="form-control input-rounded "
                                 ng-model="reg.religion" required>
                             <option  value="">Select</option>
@@ -138,7 +256,7 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 control-label reg-label">E-mail<span style="color: red">*</span></label>
 
-                    <div class="col-md-6 text-box-width" >
+                    <div class="col-md-8 text-box-width" >
                         <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
                     <span ng-if="showemail">
                         <div class="user-error-msg-arrow" ></div>
@@ -159,7 +277,7 @@
                         <!--</select>-->
                     <!--</div>-->
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <input type="number" required class="form-control input-rounded" ng-model="reg.mobile" placeholder="Mobile Number">
                      <span ng-if="showMobileNumber">
                         <div class="user-error-msg-arrow" ></div>
@@ -171,7 +289,7 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 control-label reg-label">Password<span style="color: red">*</span></label>
 
-                    <div class="col-md-6 text-box-width">
+                    <div class="col-md-8 text-box-width">
                         <span style="display: block">
                         <input required type="{{password}}" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
                                style="margin-rightt: 5%">
