--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -89,9 +89,9 @@
                     </div>-->
                     <div class="col-md-8 ">
                     <div class="row">
-                    <div class="col-md-3 col-xs-3">
+                    <div class="col-md-4 col-xs-4">
                         <!--<p class="input-group" style="margin-bottom: 5px">-->
-                            <select class="form-control" ng-model="selectDob.day">
+                            <select class="form-control"  style="padding: 0px" ng-model="selectDob.day">
                                 <option value="">DD</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col-md-4 col-xs-4">
 
-                        <select class="form-control col-md-4" ng-model="selectDob.month">
+                        <select class="form-control " style="padding: 0px" ng-model="selectDob.month">
                             <option value="">MM</option>
                             <option value="1">JAN</option>
                             <option value="2">FEB</option>
@@ -145,9 +145,9 @@
                         </select>
 
                             </div>
-                        <div class="col-md-5 col-xs-5">
+                        <div class="col-md-4 col-xs-4">
 
-                        <select class="form-control" ng-model="selectDob.year">
+                        <select class="form-control" style="padding: 0px" ng-model="selectDob.year">
                             <option value="">YEAR</option>
                             <option value="1970">1970</option>
                             <option value="1971">1971</option>
