--- a/src/app/main/help/feedback/feedback.html
+++ b/src/app/main/help/feedback/feedback.html
@@ -67,7 +67,7 @@
 
              <textarea class="form-control" rows="5"
                        ng-model="business.message"></textarea>
-                        <div ng-if="!messageVal" style="color: red">Feedback is Mandatory</div>
+                        <div ng-if="!messageVal" style="color: red">Please enter your feedback</div>
 
                     </div>
                 </div>
