--- a/src/app/main/help/busEnquires/busEnquires.html
+++ b/src/app/main/help/busEnquires/busEnquires.html
@@ -1,5 +1,6 @@
 <div class="col-md-8 col-md-offset-2">
     <div class="portlet light border-rounded" syle="margin-top:150px">
+
         <div>
             <div style="text-align: center;font-size: 15px;padding:20px">
                 If you are interested in partnering with PeoplesMatrimony.com, the Leader in Online Matrimony and he
@@ -107,3 +108,26 @@
         </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="enquiryModal.html">
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-title" style="color: #4cbcac;">
+            Success
+            <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i class="fa fa-times"></i></button>
+        </h4>
+    </div>
+
+    <div class="modal-body">
+        Administrator will Contact you soon .....
+        </div>
+        <!--<div class="modal-footer">-->
+            <!--<div class="row">-->
+                <!--<div class="col-md-12" style="color: grey">-->
+                    <!--To know more about packages call now 9999999999-->
+                <!--</div>-->
+
+
+            <!--</div>-->
+            <!--&lt;!&ndash;<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>&ndash;&gt;-->
+        <!--</div>-->
+</script>
