--- a/src/app/main/help/feedback/feedback.html
+++ b/src/app/main/help/feedback/feedback.html
@@ -85,3 +85,17 @@
         </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="feedBackModal.html">
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-title" style="color: #4cbcac;">
+            Thanks for your feedback
+            <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i class="fa fa-times"></i></button>
+        </h4>
+    </div>
+
+    <div class="modal-body">
+
+    </div>
+
+</script>
