--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -1010,7 +1010,9 @@
         <script type="text/ng-template" id="myModalContent.html">
             <div class="modal-header">
                 <h4 class="modal-title" id="modal-title" style="color: #4cbcac;">
-                    {{$ctrl.items.header}}</h4>
+                    {{$ctrl.items.header}}
+                    <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i class="fa fa-times"></i></button>
+                </h4>
             </div>
 
             <div class="modal-body">
@@ -1038,13 +1040,13 @@
                     </div>
             <div class="modal-footer">
                 <div class="row">
-                    <div class="col-md-8" style="color: grey">
+                    <div class="col-md-12" style="color: grey">
                         To know more about packages call now 9999999999
                     </div>
-                    <div class="col-md-4" >
-                        <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
+                    <!--<div class="col-md-4" >-->
+                        <!--&lt;!&ndash;<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>&ndash;&gt;-->
 
-                    </div>
+                    <!--</div>-->
 
                 </div>
                 <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
@@ -1054,7 +1056,8 @@
         <script type="text/ng-template" id="enlargePhoto.html">
             <div class="modal-header">
                 <h4 class="modal-title" id="enlarge" style="color: #4cbcac;font-weight: bold">
-                    View Photos</h4>
+                    View Photos         <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i class="fa fa-times"></i></button>
+                </h4>
             </div>
             <div class="modal-body" id="modal-body" style="text-align: center">
                 <div class="row">
@@ -1086,6 +1089,6 @@
             </div>
             <div class="modal-footer">
                 <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
-                <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
+                <!--<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>-->
             </div>
         </script>
