--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -118,7 +118,7 @@
 						<li><a ng-class="{ activetoolbar: mainlink =='shortlisted' }"
 							   ng-click="shortlisted()" >Shortlisted</a></li>
 						<li><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }"
-							   ng-click="mutalmatches()" >Mutal matches</a></li>
+							   ng-click="mutalmatches()" >Who viewed my profile</a></li>
 						<!--<li><a ng-class="{ activetoolbar: mainlink =='more' }" ng-click="more()" >More </a></li>-->
 					</ul>
 				</div>
