--- a/src/app/main/dashboard/dashboard.css
+++ b/src/app/main/dashboard/dashboard.css
@@ -19,9 +19,10 @@
     margin: 0;
     line-height: 13px;
     color: #9eacb4;
-    font-size: 13px;
-    font-weight: 400;
-    color: #666;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #9a9a9a;
     padding: 10px 0;
 }
 .progress-bar-success {
