--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -705,7 +705,7 @@
                                 <div class="portlet-title">
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
-                                        <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Her Partenr preference</span>
+                                        <span class=" uppercase"><i class="fa fa-hourglass-2 icon-color"></i>&nbsp; Her Partenr preference</span>
                                     </div>
 
                                 </div>
@@ -731,7 +731,7 @@
                                 <div class="portlet-title">
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
-                                        <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Basic Preference</span>
+                                        <span class=" uppercase"><i class="fa fa-square-o icon-color"></i>&nbsp; Basic Preference</span>
                                     </div>
 
                                 </div>
@@ -807,7 +807,7 @@
                                 <div class="portlet-title">
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
-                                        <span class=" uppercase"><i class="fa fa-pencil icon-color"></i>&nbsp; Religious Preference</span>
+                                        <span class=" uppercase"><i class="fa fa-sticky-note-o icon-color"></i>&nbsp; Religious Preference</span>
                                     </div>
 
                                 </div>
@@ -858,7 +858,7 @@
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
                                         <span class=" uppercase">
-                                            <i class="fa fa-pencil icon-color"></i>&nbsp; Education & Profession Preference</span>
+                                            <i class="fa fa-sticky-note icon-color"></i>&nbsp; Education & Profession Preference</span>
                                     </div>
 
                                 </div>
@@ -900,7 +900,7 @@
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
                                         <span class=" uppercase">
-                                            <i class="fa fa-pencil icon-color"></i>&nbsp; Location & Citizenship Preference</span>
+                                            <i class="fa fa-map-marker icon-color"></i>&nbsp; Location & Citizenship Preference</span>
                                     </div>
 
                                 </div>
@@ -950,7 +950,7 @@
                                     <div class="caption ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
                                         <span class=" uppercase">
-                                            <i class="fa fa-pencil icon-color"></i>&nbsp; What We are looking for</span>
+                                            <i class="fa fa-flag-o icon-color"></i>&nbsp; What We are looking for</span>
                                     </div>
 
                                 </div>
